...
        <TextView
            android:id="@+id/calculation_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/_inter_medium"
            android:scrollHorizontally="false"
            android:text="@string/label_you_will_pay_approximately"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintBottom_toTopOf="@id/calculation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
